tests/errors/semantic/test_semantic_04_assignment_mismatch.f90
program test_semantic_04_assignment_mismatch
  implicit none
  integer :: a
  logical :: l
  l = .true.
  a = l
end program test_semantic_04_assignment_mismatch
